Final version 1: Complete portfolio with local project images, updated branding, and enhanced UI/UX

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>saiteja-portfolio-vibe-check</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Saiteja Singirikonda - Portfolio</title>
+    <meta name="description" content="Saiteja Singirikonda - Software Developer Portfolio" />
+    <meta name="author" content="Saiteja Singirikonda" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <meta property="og:title" content="saiteja-portfolio-vibe-check" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Saiteja Singirikonda - Portfolio" />
+    <meta property="og:description" content="Saiteja Singirikonda - Software Developer Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
